// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process markdown content correctly Correctly creates a new MarkdownRemark node 1`] = `
Array [
  Array [
    Object {
      "children": Array [],
      "frontmatter": Object {
        "___PARENT": "whatever",
        "date": "2017-09-18T23:19:51.246Z",
        "parent": "whatever",
        "title": "my little pony",
      },
      "id": "whatever >>> MarkdownRemark",
      "internal": Object {
        "content": "---
title: \\"my little pony\\"
date: \\"2017-09-18T23:19:51.246Z\\"
---

Where oh where is my little pony?
    ",
        "contentDigest": "1235e2d6fdcadd5f09bf4c221bdf9094",
        "type": "MarkdownRemark",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process markdown content correctly Correctly creates a new MarkdownRemark node 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "children": Array [],
        "frontmatter": Object {
          "___PARENT": "whatever",
          "date": "2017-09-18T23:19:51.246Z",
          "parent": "whatever",
          "title": "my little pony",
        },
        "id": "whatever >>> MarkdownRemark",
        "internal": Object {
          "content": "---
title: \\"my little pony\\"
date: \\"2017-09-18T23:19:51.246Z\\"
---

Where oh where is my little pony?
    ",
          "contentDigest": "1235e2d6fdcadd5f09bf4c221bdf9094",
          "type": "MarkdownRemark",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "---
title: \\"my little pony\\"
date: \\"2017-09-18T23:19:51.246Z\\"
---

Where oh where is my little pony?
    ",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/markdown",
        },
      },
    },
  ],
]
`;
